@@ -91,6 +91,8 @@
         <jdom.version>1.1</jdom.version>
         <jopt-simple.version>4.3</jopt-simple.version>
         <google.guava.version>13.0</google.guava.version>
+        <opensaml.version>2.6.0</opensaml.version>
+        <velocity.version>1.7</velocity.version>
     </properties>
     <!-- Environment profiles. A profile encapsulates a set of properties and
     filters for a particular build configuration. Per profile properties and
@@ -1159,7 +1161,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
-                    <argLine>-Xms256m -Xmx256m</argLine>
+                    <argLine>-Xms256m -Xmx256m -XX:PermSize=128m</argLine>
                     <runOrder>alphabetical</runOrder>
                     <systemPropertyVariables>
                         <emma.rt.control>false</emma.rt.control>
